--- a/WpfRestaurant/FreeTablePage.xaml
+++ b/WpfRestaurant/FreeTablePage.xaml
@@ -18,15 +18,13 @@
                 <TextBlock x:Name="TableNoTextblock" Text="A008" Margin="10,0" FontSize="20" />
             </StackPanel>
             <StackPanel DockPanel.Dock="Bottom">
-                <Button Height="50" Background="{x:Null}" Click="Button_Click" BorderBrush="{x:Null}" Width="180"
-                        Margin="0">
-                    <DockPanel Width="180" Height="50">
-                        <DockPanel.Background>
-                            <ImageBrush ImageSource="pic/red_button.png" />
-                        </DockPanel.Background>
-                        <TextBlock Text="点菜" VerticalAlignment="Center" FontSize="20" Foreground="White"
-                                   TextAlignment="Center" />
-                    </DockPanel>
+                <Button Height="40
+                        " Click="Button_Click" BorderBrush="{x:Null}" Width="180" Style="{DynamicResource SquareButtonStyle}">
+                    <Button.Background>
+                        <ImageBrush ImageSource="pic/餐厅图标_77.png"/>
+                    </Button.Background>
+
+                    <TextBlock Text="点菜" FontSize="20" Foreground="White"/>
                 </Button>
             </StackPanel>
             <DockPanel />
