--- a/WpfRestaurant/LobbyOrderPage.xaml
+++ b/WpfRestaurant/LobbyOrderPage.xaml
@@ -18,36 +18,7 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <!--<StackPanel Width="190" Height="90" Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp" Tag="{Binding Id}">
-                            <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/blue_button.gif"/>
-                            </StackPanel.Background>
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}" FontSize="16"/>
-                                </StackPanel>
-                                <StackPanel Width="110">
-                                    <StackPanel Margin="0,15,0,0">
-                                        <TextBlock HorizontalAlignment="Center" Foreground="#FF8F92FF" FontSize="20" Text="已下单"/>
-                                    </StackPanel>
-                                    <StackPanel>
-                                        <StackPanel Orientation="Horizontal">
-                                            <Image x:Name="paid_pic" Source="pic/paid_0.png" Width="30">
-                                            </Image>
-                                            <TextBlock VerticalAlignment="Center" FontSize="20">￥40.0</TextBlock>
-                                        </StackPanel>
-                                    </StackPanel>
-                                </StackPanel>
-                            </StackPanel>
-                        </StackPanel>
-
-
-                        <DataTemplate.Triggers>
-                            <DataTrigger Binding="{Binding Path=Paid}" Value="1">
-                                <Setter TargetName="paid_pic" Property="Source" Value="pic/paid_1.png"></Setter>
-                            </DataTrigger>
-                        </DataTemplate.Triggers>-->
-                        <Button Click="BusyTableClick" Tag="{Binding Path=Id}" Background="{x:Null}"
+                        <!--<Button Click="BusyTableClick" Tag="{Binding Path=Id}" Background="{x:Null}"
                                 BorderBrush="{x:Null}">
                             <Grid Width="160" Height="100">
                                 <Grid.Background>
@@ -68,6 +39,25 @@
                                 <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" FontSize="20"
                                            Text="{Binding Cost}" Foreground="White" />
                             </Grid>
+                        </Button>-->
+                        <Button Click="BusyTableClick" Tag="{Binding Path=Id}" Background="{x:Null}" BorderBrush="{x:Null}" Style="{DynamicResource SquareButtonStyle}">
+                            <Grid Width="85" Height="50">
+                                <Grid.Background>
+                                    <ImageBrush ImageSource="pic/餐厅图标1_23.png" Stretch="Fill" />
+                                </Grid.Background>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="30"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White" Text="{Binding No}"  HorizontalAlignment="Stretch"/>
+                                <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Center" Foreground="Lime" Text="已下单" VerticalAlignment="Center"/>
+                                <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center"  Text="{Binding Cost}" Foreground="White" HorizontalAlignment="Center" />
+                            </Grid>
+
                         </Button>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
@@ -80,38 +70,23 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <!--<StackPanel Width="190" Height="90" Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp_1" Tag="{Binding Id}">
-                            <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/green_button.gif"/>
-                            </StackPanel.Background>
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Width="80"  Height="90" Orientation="Horizontal">
-                                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}" FontSize="16"/>
-                                </StackPanel>
-                                <StackPanel Width="110" Orientation="Horizontal" VerticalAlignment="Center" Height="90">
-                                    <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="Lime" VerticalAlignment="Center" Text="空闲"></TextBlock>
-                                </StackPanel>
-                            </StackPanel>
-                        </StackPanel>-->
-                        <Button Click="FreeTableClick" Tag="{Binding Path=Id}" Background="{x:Null}"
-                                BorderBrush="{x:Null}">
-                            <Grid Width="160" Height="100">
+                        <Button Click="FreeTableClick" Tag="{Binding Path=Id}" Background="{x:Null}" BorderBrush="{x:Null}" Style="{DynamicResource SquareButtonStyle}">
+                            <Grid Width="85" Height="50">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="pic/free_table.png" />
+                                    <ImageBrush ImageSource="pic/free_table.png" Stretch="Fill" />
                                 </Grid.Background>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition />
+                                    <ColumnDefinition Width="30"/>
                                     <ColumnDefinition />
                                 </Grid.ColumnDefinitions>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition />
+                                    <RowDefinition  Height="20"/>
                                     <RowDefinition />
                                 </Grid.RowDefinitions>
-                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White"
-                                           Text="{Binding No}" FontSize="20" />
-                                <TextBlock Grid.Column="1" Grid.Row="1" TextAlignment="Center" FontSize="20"
-                                           Foreground="Lime" VerticalAlignment="Center" Text="空闲" />
+                                <TextBlock VerticalAlignment="Bottom" TextAlignment="Center" Foreground="White" Text="{Binding No}" FontSize="16" HorizontalAlignment="Right"/>
+                                <TextBlock Grid.Column="1" Grid.Row="1" TextAlignment="Center" Foreground="Lime" VerticalAlignment="Top" Text="空闲" FontSize="16" HorizontalAlignment="Left"/>
                             </Grid>
+                            
                         </Button>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
@@ -124,25 +99,11 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <!--<StackPanel Width="190" Height="90" Margin="10" MouseLeftButtonUp="StackPanel_MouseLeftButtonUp_2" Tag="{Binding Order}">
-                            <StackPanel.Background>
-                                <ImageBrush ImageSource="pic/yellow_button.gif"/>
-                            </StackPanel.Background>
-                            <StackPanel Orientation="Horizontal">
-                                <StackPanel Width="80" Height="90" Orientation="Horizontal">
-                                    <TextBlock VerticalAlignment="Center" TextAlignment="Center" Width="80" Foreground="White" Text="{Binding No}" FontSize="16"/>
-                                </StackPanel>
-                                <StackPanel Width="110"  VerticalAlignment="Center" Height="90">
-                                    <TextBlock TextAlignment="Center" Width="110" FontSize="20" Foreground="#FFFFCC00" VerticalAlignment="Center" Margin="0,20,0,0">预约</TextBlock>
-                                    <TextBlock Foreground="#FFFFCC00" FontSize="20" TextAlignment="Center" Text="{Binding Time}"/>
-                                </StackPanel>
-                            </StackPanel>
-                        </StackPanel>-->
-                        <Button Click="OrderTableClick" Tag="{Binding Path=Order}" Background="{x:Null}"
+                        <!--<Button Click="OrderTableClick" Tag="{Binding Path=Order}" Background="{x:Null}"
                                 BorderBrush="{x:Null}">
                             <Grid Width="160" Height="100">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="pic/order_table" />
+                                    <ImageBrush ImageSource="pic/餐厅图标1_24.png" />
                                 </Grid.Background>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition />
@@ -159,6 +120,25 @@
                                 <TextBlock Grid.Column="1" Grid.Row="1" Foreground="White" FontSize="20"
                                            TextAlignment="Center" Text="{Binding Time}" />
                             </Grid>
+                        </Button>-->
+                        <Button Click="OrderTableClick" Tag="{Binding Path=Order}" Background="{x:Null}" BorderBrush="{x:Null}" Style="{DynamicResource SquareButtonStyle}">
+                            <Grid Width="85" Height="50">
+                                <Grid.Background>
+                                    <ImageBrush ImageSource="pic/餐厅图标1_24.png" Stretch="Fill" />
+                                </Grid.Background>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="30"/>
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition />
+                                    <RowDefinition />
+                                </Grid.RowDefinitions>
+                                <TextBlock VerticalAlignment="Center" TextAlignment="Center" Foreground="White" Text="{Binding No}"  HorizontalAlignment="Stretch"/>
+                                <TextBlock Grid.Column="1" Grid.Row="0" TextAlignment="Center" Foreground="Lime" Text="预约" VerticalAlignment="Center"/>
+                                <TextBlock Grid.Column="1" Grid.Row="1" VerticalAlignment="Center"  Text="{Binding Time}" Foreground="White" HorizontalAlignment="Center" />
+                            </Grid>
+
                         </Button>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
