--- a/WpfRestaurant/LoginWindow.xaml
+++ b/WpfRestaurant/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfRestaurant"
         mc:Ignorable="d"
-        Title="登录" Height="600" Width="900" WindowStartupLocation="CenterScreen">
+        Title="登录" Height="700" Width="1200" WindowStartupLocation="CenterScreen">
     <Window.Background>
         <ImageBrush ImageSource="pic/login_bj.jpg" />
     </Window.Background>
@@ -15,6 +15,12 @@
                 <TextBlock Text="720营地管理系统-餐厅前台" Foreground="White" FontSize="20" Margin="20" />
             </StackPanel>
             <DockPanel>
+                <DockPanel Dock="Top">
+                    <Image Source="pic/图片logo.png" Width="200"></Image>
+                </DockPanel>
+                <DockPanel Dock="Bottom">
+                    <Image Source="pic/星河露营地文字logo.png" Width="200" Margin="0,0,0,10"></Image>
+                </DockPanel>
                 <Frame x:Name="PageFrame" NavigationUIVisibility="Hidden" />
             </DockPanel>
         </DockPanel>
