将初始化数据代码挪到后台线程中 修改繁忙桌子的图标

--- a/WpfRestaurant/LobbyOrderPage.xaml
+++ b/WpfRestaurant/LobbyOrderPage.xaml
@@ -21,7 +21,7 @@
                         <Button Click="BusyTableClick" Tag="{Binding Path=Id}" Background="{x:Null}" BorderBrush="{x:Null}" Style="{DynamicResource SquareButtonStyle}">
                             <Grid Width="85" Height="50">
                                 <Grid.Background>
-                                    <ImageBrush ImageSource="pic/餐厅图标1_23.png" Stretch="Fill" />
+                                    <ImageBrush ImageSource="pic/busy_table.png" Stretch="Fill" />
                                 </Grid.Background>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="30"/>
